WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16723
tables/mozilla/bugs/
bug30418
.html test failing due to problems updating dynamic border rules
https://bugs.webkit.org/show_bug.cgi?id=16723
Summary
tables/mozilla/bugs/bug30418.html test failing due to problems updating dynam...
Darin Adler
Reported
2008-01-03 10:16:22 PST
There's a table regression tests failing intermittently. I know why. More details to come.
Attachments
patch in progress
(8.31 KB, patch)
2008-01-03 10:16 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
patch
(9.29 KB, patch)
2008-01-03 16:13 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
patch (with tests this time; oops!)
(28.22 KB, patch)
2008-01-03 17:03 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-01-03 10:16:46 PST
Created
attachment 18253
[details]
patch in progress
David Kilzer (:ddkilzer)
Comment 2
2008-01-03 10:39:52 PST
Is this LayoutTests/tables/mozilla/bugs/
bug30418
.html? If so,
Bug 16724
is a duplicate.
Darin Adler
Comment 3
2008-01-03 13:17:59 PST
(In reply to
comment #2
)
> Is this LayoutTests/tables/mozilla/bugs/
bug30418
.html? If so,
Bug 16724
is a > duplicate.
Yes.
Darin Adler
Comment 4
2008-01-03 13:18:14 PST
***
Bug 16724
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 5
2008-01-03 13:18:38 PST
The checked-in result for this test used to omit borders. I checked in a result that has the borders, but it's only intermittently working.
Darin Adler
Comment 6
2008-01-03 16:13:35 PST
Created
attachment 18255
[details]
patch
Darin Adler
Comment 7
2008-01-03 17:03:58 PST
Created
attachment 18257
[details]
patch (with tests this time; oops!)
mitz
Comment 8
2008-01-03 17:13:18 PST
Comment on
attachment 18257
[details]
patch (with tests this time; oops!) r=me
Darin Adler
Comment 9
2008-01-03 17:18:33 PST
Committed revision 29138.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug