WebCore:

Reviewed by Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=16723
          tables/mozilla/bugs/bug30418.html test failing due to problems updating dynamic border rules

        Test: fast/table/border-changes.html

        * html/HTMLTableElement.h:
        * html/HTMLTableElement.cpp:
        (WebCore::HTMLTableElement::parseMappedAttribute): Check the border type before and after
        parsing attributes, rather than doing this only for the rules attribute.
        (WebCore::HTMLTableElement::cellBorders): Added.
        (WebCore::HTMLTableElement::getSharedCellDecl): Changed to use cellBorders to factor out the
        rule about what type of borders to use.

LayoutTests:

        Reviewed by Mitz.

        - test for http://bugs.webkit.org/show_bug.cgi?id=16723
          tables/mozilla/bugs/bug30418.html test failing due to problems updating dynamic border rules

        * fast/table/border-changes-expected.txt: Added.
        * fast/table/border-changes.html: Added.
        * fast/table/resources: Added.
        * fast/table/resources/TEMPLATE.html: Added.
        * fast/table/resources/border-changes.js: Added.



Canonical link: https://commits.webkit.org/22976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29138 268f45cc-cd09-0410-ab3c-d52691b4dbfc