WebCore/html/HTMLTableElement.h
@@ -104,6 +104,9 @@ public:
 
 private:
     enum TableRules { UnsetRules, NoneRules, GroupsRules, RowsRules, ColsRules, AllRules };
+    enum CellBorders { NoBorders, SolidBorders, InsetBorders, SolidBordersColsOnly, SolidBordersRowsOnly };
+
+    CellBorders cellBorders() const;
 
     HTMLTableSectionElement* lastBody() const;
 
